Extend getter detection and comprehensive fallback mode tests
- GetterBasedTypeAdapterFactory: recognize any zero-arg, non-void,
  non-static public method as an accessor (not just getX/isX patterns)
- Add EXCLUDED_METHOD_NAMES set (hashCode, toString, clone, etc.)
- Throw IllegalStateException with actionable message when no
  accessors are found (instead of silent toString fallback)
- ReflectModeFallbackTest: 35 tests covering collections, maps,
  inheritance (3 levels), enums, locked types, Throwable, ignoring,
  custom matching, circular refs, non-standard getter naming
- ReflectModeFallbackJsonMatcherTest: 30 tests covering same scenarios
  for file-based JSON matcher including mismatch detection and
  not-approved file creation